--- a/MiniShopApp/Components/App.razor
+++ b/MiniShopApp/Components/App.razor
@@ -11,7 +11,7 @@
    <link rel="stylesheet" href="@Assets["print.css"]" />
     <link rel="stylesheet" href="@Assets["MiniShopApp.styles.css"]" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <ImportMap />
+    <ImportMap @rendermode="RenderModeForPage" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
@@ -37,7 +37,7 @@
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
 
-    private IComponentRenderMode? RenderModeForPage => HttpContext.Request.Path.StartsWithSegments("/")
+    private IComponentRenderMode? RenderModeForPage => HttpContext.Request.Path.StartsWithSegments("/Account")
        ? null
        : new InteractiveServerRenderMode(false);
 }
