--- a/MiniShopApp/_Imports.razor
+++ b/MiniShopApp/_Imports.razor
@@ -1,4 +1,7 @@
-﻿@using System.Net.Http
+﻿@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Identity
+@using MiniShopApp.Components.Account
+
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -14,9 +17,8 @@
 @using MiniShopApp.Shared
 @using MudBlazor
 @using MudBlazor.Services
-
+@attribute [Authorize] 
 @inject ISnackbar SnackbarService
 @inject IDialogService DialogService
-@inject NavigationManager NavigationManager
 @inject UserState userState
-
+@inject NavigationManager NavigationManager
