--- a/MiniShopApp/Components/Account/Pages/Login.razor
+++ b/MiniShopApp/Components/Account/Pages/Login.razor
@@ -50,8 +50,9 @@
         </EditForm>
         </MudPaper>
 </MudStack>
-
-
+<input @bind="Input.Email" />
+<input @bind="Input.Password" />
+<button @onclick="LoginUser">Login</button>
 @code {
     private string? errorMessage;
 
