--- a/MiniShopApp/Components/Account/Pages/Login.razor
+++ b/MiniShopApp/Components/Account/Pages/Login.razor
@@ -24,18 +24,16 @@
             <MudText Typo="Typo.subtitle1" Align="Align.Center">Please log in to continue.</MudText>
         </MudStack>
        
-        <StatusMessage Message="@errorMessage" />
-        <EditForm Model="Input" OnValidSubmit="LoginUser">
-            <DataAnnotationsValidator />
-            <ValidationSummary />
+@*         <StatusMessage Message="@errorMessage" /> *@
+        <form method="post" @onsubmit="HandleLogin">
 
-            <MudTextField Label="Email " @bind-Value="Input.Email" For="@(() => Input.Email)"
+            <MudTextField Label="Email " @bind-Value="Input.Email"
                           Required="true" RequiredError="Email is required"
                           Variant="Variant.Outlined"
                           Placeholder="Email or username"
                           Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Email" />
 
-            <MudTextField Label="Password " @bind-Value="Input.Password" For="@(() => Input.Password)"
+            <MudTextField Label="Password " @bind-Value="Input.Password"
                           InputType="InputType.Password"
                           Placeholder="Password"
                           Required="true" RequiredError="Password is required"
@@ -47,19 +45,22 @@
             <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Outlined" Class="mb-5" Color="Color.Primary" FullWidth="true">
                 Log In
             </MudButton>
-        </EditForm>
+        </form>
         </MudPaper>
 </MudStack>
-<input @bind="Input.Email" />
-<input @bind="Input.Password" />
-<button @onclick="LoginUser">Login</button>
+<p>@errorMessage</p>
+<form method="post" @onsubmit="LoginUser">
+        <input @bind="Input.Email" class="form-control" placeholder="Email"/>
+        <input @bind="Input.Password" class="form-control" placeholder="Password" />
+    <button type="submit">Login</button>
+</form>
 @code {
     private string? errorMessage;
 
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
 
-    [SupplyParameterFromForm]
+    // [SupplyParameterFromForm]
     private UserRequest Input { get; set; } = new();
 
     [SupplyParameterFromQuery]
@@ -67,13 +68,18 @@
 
     protected override async Task OnInitializedAsync()
     {
-        var context = HttpContextAccessor.HttpContext;
-        if (context != null && HttpMethods.IsGet(context.Request.Method))
+        if (HttpMethods.IsGet(HttpContext.Request.Method))
         {
-            await context.SignOutAsync(IdentityConstants.ExternalScheme);
+            // Clear the existing external cookie to ensure a clean login process
+            await HttpContext.SignOutAsync(IdentityConstants.ExternalScheme);
         }
     }
-
+    private async Task HandleLogin()
+    {
+        var url = $"/Account/LogInHandle?email={Input.Email}&password={Input.Password}&rememberMe={Input.RememberMe}&returnUrl={ReturnUrl ?? "/"}";
+        NavigationManager.NavigateTo(url, forceLoad: true); // Full page reload to Razor Page
+        await Task.CompletedTask; // Ensure the method is async
+    }
     public async Task LoginUser()
     {
         try
@@ -104,11 +110,11 @@
 
                 return;
             }
-            var result = await SignInManager.PasswordSignInAsync(loginUser, Input.Password, Input.RememberMe, lockoutOnFailure: false);
+            var result = await SignInManager.PasswordSignInAsync(Input.Email, Input.Password, Input.RememberMe, lockoutOnFailure: false);
             if (result.Succeeded)
             {
                 Logger.LogInformation("User logged in.");
-                RedirectManager.RedirectTo(ReturnUrl);
+                RedirectManager.RedirectTo("/");
             }
             else
             {
