--- a/MiniShopApp/Components/Account/Pages/Login.razor
+++ b/MiniShopApp/Components/Account/Pages/Login.razor
@@ -68,11 +68,16 @@
 
     protected override async Task OnInitializedAsync()
     {
-        if (HttpMethods.IsGet(HttpContext.Request.Method))
+        var context = HttpContextAccessor.HttpContext;
+        if (context != null && HttpMethods.IsGet(context.Request.Method))
         {
-            // Clear the existing external cookie to ensure a clean login process
-            await HttpContext.SignOutAsync(IdentityConstants.ExternalScheme);
+            await context.SignOutAsync(IdentityConstants.ExternalScheme);
         }
+        // if (HttpMethods.IsGet(HttpContext.Request.Method))
+        // {
+        //     // Clear the existing external cookie to ensure a clean login process
+        //     await HttpContext.SignOutAsync(IdentityConstants.ExternalScheme);
+        // }
     }
     private async Task HandleLogin()
     {
