--- a/MiniShopApp/Components/Account/Pages/Lockout.razor
+++ b/MiniShopApp/Components/Account/Pages/Lockout.razor
@@ -1,14 +1,21 @@
 ﻿@page "/account/logout"
 @using Domain.IdentityModel
+@using Microsoft.AspNetCore.Components.Authorization
 
 <PageTitle>Locked out</PageTitle>
-@inject SignInManager<ApplicationUser> SignInManager
-@inject IdentityRedirectManager RedirectManager
+@inject AuthenticationStateProvider AuthProvider
+@inject NavigationManager NavigationManager
 
 @code {
     protected override async Task OnInitializedAsync()
     {
-        await SignInManager.SignOutAsync();
-        RedirectManager.RedirectTo("/account/login");
+        if (AuthProvider is CustomAuthenticationStateProvider customAuth)
+        {
+            customAuth.MarkUserAsLoggedOut();
+            NavigationManager.NavigateTo("/account/login");
+        }
+
+        await Task.CompletedTask;
     }
+
 }
