--- a/MiniShopApp/_Imports.razor
+++ b/MiniShopApp/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Identity
 @using MiniShopApp.Components.Account
+@* @attribute [Authorize] *@
 
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
@@ -17,7 +18,6 @@
 @using MiniShopApp.Shared
 @using MudBlazor
 @using MudBlazor.Services
-@attribute [Authorize] 
 @inject ISnackbar SnackbarService
 @inject IDialogService DialogService
 @inject UserState userState
